<resources>
    <string name="app_name">assignment 8</string>
    <string name="books">Books</string>
    <string name="reviews">Reviews</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="name">Mark William</string>
    <string name="btn_txt">Want to read</string>
    <string name="notification_clicked">Notification Clicked</string>
    <string name="reviews_clicked">Reviews Clicked</string>
    <string name="favorite_clicked">Favorite Clicked</string>
    <string name="search_clicked">Search Clicked</string>
    <string name="profile_clicked">Profile Clicked</string>
    <string name="settings_clicked">Settings Clicked</string>
</resources>