<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1">
        <item android:id="@+id/Reviews"
            android:title="@string/reviews"
            android:icon="@drawable/star" />

        <item android:id="@+id/favorite"
            android:title="@string/favorite"
            android:icon="@drawable/favorite" />

        <item android:id="@+id/search"
            android:title="@string/search"
            android:icon="@drawable/search" />
    </group>
    <group android:id="@+id/group2">
        <item android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/profile" />

        <item android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/settings" />
    </group>
</menu>